# Infantry-H7

./: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  compile_commands.json  enginex.ioc  openocd.cfg
Core/Inc/: FreeRTOSConfig.h  dma.h  main.h  stm32h7xx_it.h
Core/Src/: adc.c  dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
DBG/: DBG.jdebug
application/: robot.c  robot_def.h  robot_task.h
application/chassis/: chassis.c
application/cmd/: robot_cmd.c
application/gimbal/: gimbal.c
application/shoot/: shoot.c
bsp/: bsp_init.h  bsp_tools.c  bsp_tools.h
bsp/adc/: bsp_adc.c  bsp_adc.h
bsp/can/: bsp_can.c  bsp_can.h  bsp_can.md
bsp/dwt/: bsp_dwt.h  bsp_dwt.md
bsp/pwm/: bsp_pwm.c  bsp_pwm.h
bsp/usart/: bsp_usart.c  bsp_usart.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
modules/Trajectory_planning/: Trajectory_planning.c  Trajectory_planning.h
modules/alarm/: buzzer.c  buzzer.h
modules/algorithm/: QuaternionEKF.c  controller.c  controller.h  fdacoefs.h  kalman_filter.h  lqr.c  lqr.md  user_lib.c  user_lib.h
modules/arm_solution/: arm_solution.c  arm_solution.h
modules/arm_solution/matrix/: matrix.c  matrix.h
modules/board2board/: board2board.c  board2board.h
modules/daemon/: daemon.c
modules/imu/: BMI088Middleware.c  BMI088driver.c  ins_task.c  ins_task.h  ins_task.md
modules/lqr/: lqr.h  lqr.md
modules/master_machine/: master_machine.md  master_process.c  master_process.h  seasky_protocol.c  seasky_protocol.h
modules/message_center/: message_center.c  message_center.h
modules/motor/: motor_def.h  motor_task.c  motor_task.h
modules/motor/DJImotor/: dji_motor.c  dji_motor.h  djmotor.md
modules/motor/DMmotor/: dmmotor.c  dmmotor.h
modules/motor/HTmotor/: HT04.c  HT04.md
modules/motor/MImotor/: mi_motor.c  mi_motor.h
modules/motor/servo_motor/: servo_motor.h
modules/referee/: referee_UI.c  referee_protocol.h  referee_task.c  referee_task.h  rm_referee.c  rm_referee.h
modules/remote/: remote_control.c  remote_control.h  remote_control.md
modules/super_cap/: super_cap.c  super_cap.h
